--- a/Avicarnes/Avicarnes.csproj
+++ b/Avicarnes/Avicarnes.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Iproducto.cs" />
     <Compile Include="LineaProducto.cs" />
     <Compile Include="Busqueda.cs" />
     <Compile Include="Pago.cs" />
@@ -78,6 +79,7 @@
     <Compile Include="ParametrosOracle.cs" />
     <Compile Include="Pedido.cs" />
     <Compile Include="Plantilla.cs" />
+    <Compile Include="PlantillaPadre.cs" />
     <Compile Include="Producto.cs" />
     <Compile Include="ProductoDAO.cs" />
     <Compile Include="Program.cs" />
