--- a/Avicarnes/Avicarnes.csproj
+++ b/Avicarnes/Avicarnes.csproj
@@ -147,6 +147,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="Telefono.datasource" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
